-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 25
-
Component/s: hotspot
-
b13
The type signature for 'int ZMappedCache::EntryCompare::cmp(const IntrusiveRBNode* a, const IntrusiveRBNode* b)' is incorrect. As described in rbTree.hpp, the cmp function used for tree validation should return a bool (true if a < b, false otherwise).
The incorrect signature prevents IntrusiveRBTree from using cmp as intended during validation, resulting in the fallback verify function being used, which always returns valid node comparisons. This could mask potential issues in the tree structure.
The incorrect signature prevents IntrusiveRBTree from using cmp as intended during validation, resulting in the fallback verify function being used, which always returns valid node comparisons. This could mask potential issues in the tree structure.
- links to
-
Commit(master)
openjdk/jdk/3641c32c
-
Review(master)
openjdk/jdk/26904