8365994: ZGC: Incorrect type signature in ZMappedCache comparator

Reviewed-by: cnorrbin, aboldtch